BrowseItems initial setup
Set up of "browse items" activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="BrowseImagesBtnCaption">Browse Images</string>
     <string name="textViewImagePath">Image path</string>
     <string name="ImageDesc">Image to be posted</string>
+    <string name="LeftCaption">&lt;</string>
+    <string name="RightCaption">&gt;</string>
 
 </resources>
